--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="£600/day"
     />
     <script
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
